--- a/method.tex
+++ b/method.tex
@@ -88,3 +88,4 @@ The statistic results are shown in~\ref{bra-table}
     \caption{Average value and standard deviation from~\cite{datsetbr}}
     \label{bra-table}
 \end{table}
+GHO
