--- a/method.tex
+++ b/method.tex
@@ -151,3 +151,7 @@ code are displayed in~\ref{png:random-branch}
     \caption{The flow graph of random branches augmentation}
     \label{png:random-branch}
 \end{figure}
+\subsection{Model architecture}
+Our model is based on DETRs Beat YOLOs on Real-time Object Detection or RT-DETR~\cite{RTDETR}.
+
+ 
