--- a/ref.bib
+++ b/ref.bib
@@ -200,3 +200,65 @@ year = {2015}
   note         = {Accessed: 2024-11-19},
   year         = {2024}
 }
+@InProceedings{RTDETR,
+    author    = {Zhao, Yian and Lv, Wenyu and Xu, Shangliang and Wei, Jinman and Wang, Guanzhong and Dang, Qingqing and Liu, Yi and Chen, Jie},
+    title     = {DETRs Beat YOLOs on Real-time Object Detection},
+    booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month     = {June},
+    year      = {2024},
+    pages     = {16965-16974}
+}
+@InProceedings{DETR,
+author="Carion, Nicolas
+and Massa, Francisco
+and Synnaeve, Gabriel
+and Usunier, Nicolas
+and Kirillov, Alexander
+and Zagoruyko, Sergey",
+editor="Vedaldi, Andrea
+and Bischof, Horst
+and Brox, Thomas
+and Frahm, Jan-Michael",
+title="End-to-End Object Detection with Transformers",
+booktitle="Computer Vision -- ECCV 2020",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="213--229",
+isbn="978-3-030-58452-8"
+}
+@InProceedings{yolov1,
+author = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+title = {You Only Look Once: Unified, Real-Time Object Detection},
+booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {June},
+year = {2016}
+}
+@ARTICLE{fastrcnn,
+  author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks}, 
+  year={2017},
+  volume={39},
+  number={6},
+  pages={1137-1149},
+  keywords={Proposals;Object detection;Convolutional codes;Feature extraction;Search problems;Detectors;Training;Object detection;region proposal;convolutional neural network},
+  doi={10.1109/TPAMI.2016.2577031}}
+@InProceedings{yolov2,
+author = {Redmon, Joseph and Farhadi, Ali},
+title = {YOLO9000: Better, Faster, Stronger},
+booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {7},
+year = {2017}
+}
+@inproceedings{transformer,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
