--- a/abstract.tex
+++ b/abstract.tex
@@ -5,7 +5,7 @@ In ornithological research, locating and recognizing individual birds are fundam
 However, bird detection is challenging due to issues such as occlusion, small object size, blurriness, backlighting, and crowding. 
 In this paper, we established TH-Birds, a dataset containing 708 images of birds, many of which are difficult to detect due to the aforementioned challenges. 
 We annotated the dataset with bounding boxes and segmentation masks, and further categorized the images based on quality-related factors. 
-Additionally, we propose a novel data augmentation technique to simulate branch occlusions and modify the loss function, Feature Pyramid Networks (FPN), and positive sample matching strategy of the RT-DETR model. 
+Additionally, we propose a novel data augmentation technique to simulate branch occlusions and modify the loss function and positive sample matching strategy of the RT-DETR model. 
 These enhancements enable our model to achieve improved accuracy and recall in complex scenarios. 
 Experimental results demonstrate a significant improvement in detection performance, particularly in occluded and cluttered environments.
 
