--- a/method.tex
+++ b/method.tex
@@ -147,7 +147,7 @@ the line with an average value determined by the size of the
 bird and a fixed standard deviation. The flow graph and the pseudo 
 code are displayed in~\ref{png:random-branch}
 \begin{figure}[H]
-    \includegraphics[width=0.45\textwidth]{bracn_aug.png}
+    \includegraphics[width=0.45\textwidth]{images/img1.jpg}
     \caption{The flow graph of random branches augmentation}
     \label{png:random-branch}
 \end{figure}
